# laws

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pr-check.yml  release.yml
src/: config.rs  dashboard.rs  error.rs  main.rs  persistence.rs  storage.rs
src/protocol/: json.rs  mod.rs  query.rs  rest_json.rs  rest_xml.rs
src/services/: accessanalyzer.rs  acm.rs  acm_pca.rs  amp.rs  amplify.rs  apigateway.rs  apigatewayv2.rs  appconfig.rs  appflow.rs  application_autoscaling.rs  appmesh.rs  apprunner.rs  appstream.rs  appsync.rs  athena.rs  auditmanager.rs  autoscaling.rs  backup.rs  batch.rs  bedrock.rs  braket.rs  budgets.rs  chatbot.rs  cleanrooms.rs  cloud9.rs  cloudcontrol.rs  cloudformation.rs  cloudfront.rs  cloudhsm.rs  cloudmap.rs  cloudsearch.rs  cloudtrail.rs  cloudwatch.rs  cloudwatch_logs.rs  codeartifact.rs  codebuild.rs  codecommit.rs  codedeploy.rs  codeguru.rs  codepipeline.rs  (+145 more)
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.vue  index.css  main.ts
ui/src/components/: HomePage.vue  Layout.vue  LiveLogs.vue  RequestTable.vue  ResourcePanel.vue  ServiceBrowser.vue  ServiceDetail.vue  ServiceGrid.vue  StatsCards.vue
ui/src/components/ui/: AppBadge.vue  AppCard.vue
ui/src/composables/: usePinnedServices.ts  useSSE.ts
ui/src/data/: aws-services.ts
ui/src/types/: request.ts
